<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:paddingHorizontal="@dimen/spacing_medium">

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/title"
            android:textColor="@color/color_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextJobTitle"
            style="@style/EditTextCreateJobStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/spacing_normal"
            android:hint="@string/add_job_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

        <TextView
            android:id="@+id/textViewCompany"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/company"
            android:textColor="@color/color_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextJobTitle" />

        <EditText
            android:id="@+id/editTextCompanyName"
            style="@style/EditTextCreateJobStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/spacing_normal"
            android:hint="@string/add_company_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCompany" />

        <TextView
            android:id="@+id/textViewLocation"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/location"
            android:textColor="@color/color_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextCompanyName" />

        <EditText
            android:id="@+id/editTextLocation"
            style="@style/EditTextCreateJobStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/spacing_normal"
            android:hint="@string/country_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLocation" />

        <TextView
            android:id="@+id/textViewJobType"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/job_type"
            android:textColor="@color/color_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextLocation" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupJopType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewJobType">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipOnSite"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_site" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHybrid"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hybrid" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipRemote"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remote" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textViewWorkType"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/work_type"
            android:textColor="@color/color_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroupJopType" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupWorkType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewWorkType">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFullTime"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_time" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipPartTime"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/part_time" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipInternship"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/internship" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipVolunteer"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volunteer" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTemporary"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temporary" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textViewExperience"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/experience"
            android:textColor="@color/color_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroupWorkType" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewExperience">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipEntry"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entry" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipIntermediate"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intermediate" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMidLevel"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mid_level" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSeniorLevel"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senior_level" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipExpert"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expert" />
        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>