<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_medium"
    android:background="@color/background">

    <TextView
        android:id="@+id/textViewPageNumber"
        style="@style/TextStyle.body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_number_one"
        android:textColor="@color/tertiary"
        app:layout_constraintBottom_toTopOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/title"
        android:textColor="@color/color_text_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPageNumber" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextJobTitle"
        style="@style/EditTextCreateJobStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/spacing_normal"
        android:hint="@string/add_job_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewCompany"
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/company"
        android:textColor="@color/color_text_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextJobTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextCompanyName"
        style="@style/EditTextCreateJobStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/spacing_normal"
        android:hint="@string/add_company_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCompany">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewLocation"
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/location"
        android:textColor="@color/color_text_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCompanyName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLocation"
        style="@style/EditTextCreateJobStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/spacing_normal"
        android:hint="@string/country_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLocation">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_background" />

    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/chipsPageOneStub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inflatedId="@+id/chipsPageOneLayout"
        android:layout="@layout/item_create_job_chips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>