<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.cupcake.jobsfinder.ui.posts.PostItemUIState" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/spacing_normal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_avatar"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                app:layout_constraintBottom_toBottomOf="@+id/textViewCreatedAt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageView"
                app:strokeColor="@color/light_border"
                app:strokeWidth="@dimen/person_image_border_width"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textViewPersonName"
                style="@style/TextStyle.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/personal_name"
                app:layout_constraintStart_toEndOf="@+id/image_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewJopTitle"
                style="@style/TextStyle.body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jop_title"
                android:textColor="@color/color_text_secondary"
                app:layout_constraintStart_toStartOf="@+id/textViewPersonName"
                app:layout_constraintTop_toBottomOf="@+id/textViewPersonName" />

            <TextView
                android:id="@+id/textViewCreatedAt"
                style="@style/TextStyle.caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_tertiary"
                app:layout_constraintStart_toStartOf="@+id/textViewJopTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewJopTitle"
                tools:text="@string/created_at"
                android:text='@{String.valueOf(item.createdAt)}'
                />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                app:layout_constraintBottom_toBottomOf="@+id/textViewPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewPersonName"
                app:srcCompat="@drawable/ic_more" />

            <TextView
                android:id="@+id/textViewContent"
                style="@style/TextStyle.body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_normal"
                android:ellipsize="end"
                android:lines="2"
                android:textColor="@color/color_text_primary"
                app:layout_constraintTop_toBottomOf="@+id/textViewCreatedAt"
                tools:text="@string/post_content"
                android:text="@{item.description}"
                />

            <ImageView
                android:id="@+id/imageViewPostImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:scaleType="centerCrop"
                android:src="@drawable/test_post_image"
                app:layout_constraintBottom_toTopOf="@+id/imageViewLike"
                app:layout_constraintTop_toBottomOf="@+id/textViewContent" />

            <ImageView
                android:id="@+id/imageViewComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewLike"
                app:layout_constraintStart_toEndOf="@+id/textViewLikesCount"
                app:layout_constraintTop_toTopOf="@+id/imageViewLike"
                app:srcCompat="@drawable/ic_comment" />

            <TextView
                android:id="@+id/textViewLikesCount"
                style="@style/TextStyle.caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:text="@string/likes_count"
                android:textColor="@color/color_text_tertiary"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewLike"
                app:layout_constraintStart_toEndOf="@+id/imageViewLike"
                app:layout_constraintTop_toTopOf="@+id/imageViewLike" />

            <ImageView
                android:id="@+id/imageViewLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:rotationY="180"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_like" />

            <TextView
                android:id="@+id/textViewCommentsCount"
                style="@style/TextStyle.caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:text="@string/comments_count"
                android:textColor="@color/color_text_tertiary"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewComment"
                app:layout_constraintStart_toEndOf="@+id/imageViewComment"
                app:layout_constraintTop_toTopOf="@+id/imageViewComment" />

            <ImageView
                android:id="@+id/imageViewSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_medium"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewComment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageViewComment"
                app:srcCompat="@drawable/ic_saved" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>